# Trema

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Test Results - trema_test.html  main.cpp  xmake.lua
Docs/: activities.md  tss.md  txml.md
Sample/: CMakeLists.txt  login_view.txml  main.cpp  people_view.txml  styles.tss
Sample/resources/styles/: styles.tss
Sample/resources/views/: login_view.txml  people_view.txml
Src/: main.cpp
Src/Sample/: main.cpp  res.rc
Src/Sample/windows/: res.rc  resource.h
Src/Test/: CMakeLists.txt  Tests.cpp
Src/Test/Utils/: FileSplitsTests.cpp  StringConversionTests.cpp
Src/Trema/: TremaProgram.h
Src/Trema/Utils/: FileSplits.cpp  FileSplits.h  StringConversion.cpp  StringConversion.h
Src/View/: IWindow.cpp  IWindow.h  WindowInitializationException.cpp
Src/View/Components/: ElementStyle.cpp  ElementStyle.h  IGuiElement.cpp  IGuiElement.h
Src/View/Exceptions/: FileNotFoundException.cpp
Src/View/ImGUI/: imgui.cpp  imgui_demo.cpp  imgui_impl_sdl.cpp  imstb_rectpack.h
Src/View/Parser/: IViewParser.cpp  IViewParser.h
Test/: CMakeLists.txt  Tests.cpp
Test/View/Style/TokenizerTests/: TokenizerTests.cpp
Test/View/Style/TokenizerTests/Tokenizer/: TokenizerTests.cpp
Test/View/Utils/: FileSplitsTests.cpp
Trema/: CMakeLists.txt  TremaProgram.h
Trema/Observable/Collections/: IsCollection.h  ObservableCollection.h
Trema/Utils/Observable/: IObservableEntity.h  ObservableEntity.cpp
Trema/View/: IWindow.cpp  IWindow.h  WindowInitializationException.cpp  WindowInitializationException.h
Trema/View/Activities/: Activity.cpp  Activity.h  ActivityAsBase.h  ActivityBuilder.h  IStateManager.cpp  IStateManager.h  Intent.cpp  Intent.h  NoActivityBuilderException.h  ThreadSafeStateManager.cpp  ThreadSafeStateManager.h
Trema/View/Components/: GuiElement.cpp  GuiElement.h  IGuiElement.cpp  IGuiElement.h  IPopupComponent.cpp  IPopupComponent.h
Trema/View/Components/Container/: Container.cpp  Container.h  IContainer.cpp  IContainer.h  WindowContainer.cpp  WindowContainer.h
Trema/View/Components/Layout/: ILayout.cpp  ILayout.h  Layout.cpp  Layout.h  LayoutException.cpp  LayoutException.h
Trema/View/Components/Layout/Docking/: DockSpace.cpp  DockSpace.h  MainDockSpace.cpp  MainDockSpace.h
Trema/View/Components/Layout/StackSpace/: StackSpace.cpp  StackSpace.h
Trema/View/Components/Style/: ElementStyle.cpp  ElementStyle.h  StyleColor.cpp  StyleColor.h
Trema/View/Components/TopMenu/: MenuOption.cpp  MenuOption.h  SubMenu.cpp  SubMenu.h  TopMenu.cpp  TopMenu.h
Trema/View/Components/Widgets/: Button.cpp  Button.h  Checkbox.cpp  Checkbox.h  ColorPicker.cpp  ColorPicker.h  DisplayException.cpp  DisplayException.h  FamilyException.cpp  FamilyException.h  Separator.cpp  Separator.h  SliderFloat.cpp  Table.cpp  Table.h  Text.cpp  Text.h
Trema/View/Components/Widgets/CollectionView/: VectorView.cpp  VectorView.h
Trema/View/Components/Widgets/DataContainers/: DataSource.cpp  DataSource.h  IDataConsumer.h  IDataSource.cpp  IDataSource.h  Table.h  TableRow.h
Trema/View/Components/Widgets/Input/: TextArea.cpp  TextArea.h  TextInput.cpp  TextInput.h
Trema/View/Components/Widgets/Options/: Combo.cpp  Combo.h  Radio.cpp  Radio.h  SelectorOption.cpp  SelectorOption.h
Trema/View/Components/Widgets/Pure/: Separator.cpp  Separator.h  Text.cpp  Text.h
Trema/View/Components/Widgets/Pure/Image/: Image.cpp  Image.h  ImageFormat.cpp  ImageFormat.h
Trema/View/Components/Widgets/Sliders/: SliderFloat.cpp  SliderFloat.h  SliderInt.cpp  SliderInt.h
Trema/View/Components/Windows/: FileDialog.cpp  FileDialog.h
Trema/View/Exceptions/: FileNotFoundException.cpp  FileNotFoundException.h  ParsingException.cpp  ParsingException.h
Trema/View/ImGUI/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
Trema/View/ImGUI/Extensions/FileDialog/: ImGuiFileBrowser.cpp  ImGuiFileBrowser.h  dirent.h
Trema/View/ImGUI/Extensions/ImPlot/: implot.h  implot_internal.h
Trema/View/Parser/: IViewParser.cpp  IViewParser.h  ViewParser.cpp  ViewParser.h
Trema/View/Parser/TinyXML/: TinyXMLViewParser.cpp  TinyXMLViewParser.h  tinyxml.cpp  tinyxml.h
Trema/View/SDL2/: SDL2Window.cpp  SDL2Window.h
Trema/View/Style/: CompilationMistake.cpp  CompilationMistake.h  IStyleParser.cpp  IStyleParser.h  StackedStyleParser.cpp  StackedStyleParser.h  StyleApplier.cpp  StyleApplier.h  SymbolTable.cpp  SymbolTable.h  TokenValue.h  Variable.cpp  Variable.h
Trema/View/Style/Parser/: IStyleParser.h  OperationsTable.h  StackedStyleParser.cpp  StackedStyleParser.h
Trema/View/Style/Tokenizer/: ITokenizer.cpp  ITokenizer.h  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h
Trema/View/Utils/: FileSplits.cpp  FileSplits.h  StringExtensions.cpp  StringExtensions.h
Trema/View/Vulkan/: VulkanRenderer.cpp  VulkanRenderer.h
Trema/View/Windowing/: IRenderImage.cpp  IRenderImage.h  Window.cpp  Window.h  WindowInfo.h  WindowInitializationException.cpp  WindowInitializationException.h
Trema/View/Windowing/Fonts/: FontsRepository.cpp  FontsRepository.h
Trema/View/Windowing/GLFW/: GLFWBackendStrategy.h  GLFWWindow.cpp  GLFWWindow.h
Trema/View/Windowing/Vulkan/: Vulkan.h  VulkanImage.cpp  VulkanImage.h  VulkanRenderer.cpp  VulkanRenderer.h
View/: IWindow.cpp  IWindow.h
View/Components/: ElementStyle.cpp  ElementStyle.h  IGuiElement.cpp  IGuiElement.h  ILayout.cpp  ILayout.h  IPopupComponent.h
View/ImGUI/: imgui_demo.cpp  imgui_impl_sdl.cpp  imgui_tables.cpp
View/Parser/: IViewParser.cpp  IViewParser.h  ParsingException.h
View/SDL2/: SDL2Window.cpp  SDL2Window.h
View/Style/: IStyleParser.h  StackedStyleParser.cpp  StackedStyleParser.h  StyleApplier.cpp  StyleApplier.h  SymbolTable.cpp  SymbolTable.h  Tokenizer.cpp  Tokenizer.h  Variable.cpp  Variable.h
View/Utils/: FileSplits.cpp  StringExtensions.h
View/Vulkan/: VulkanRenderer.cpp  VulkanRenderer.h
(+248 files in other folders)
